--- a/bmw.html
+++ b/bmw.html
@@ -40,6 +40,7 @@
             --safe-left: env(safe-area-inset-left, 0px);
             --safe-top-live: var(--safe-top);
             --safe-bottom-live: var(--safe-bottom);
+            --safe-bottom-fill: var(--safe-bottom);
         }
 
         html, body {
@@ -1612,6 +1613,17 @@
             justify-content: center;
             transition: opacity 0.5s ease, visibility 0.5s ease;
         }
+
+        .auth-overlay::after {
+            content: "";
+            position: absolute;
+            left: 0;
+            right: 0;
+            bottom: calc(-1 * var(--safe-bottom-fill, var(--safe-bottom)));
+            height: var(--safe-bottom-fill, var(--safe-bottom));
+            background: linear-gradient(135deg, #1a1a2e 0%, #16213e 50%, #0f3460 100%);
+            pointer-events: none;
+        }
         
         .auth-overlay.hidden {
             opacity: 0;
@@ -1827,7 +1839,7 @@
                 top: 0;
                 left: 0;
                 right: 0;
-                bottom: calc(-1 * var(--safe-bottom-live, var(--safe-bottom)));
+                bottom: calc(-1 * var(--safe-bottom-fill, var(--safe-bottom)));
                 width: auto;
                 min-height: 0;
                 height: auto;
@@ -3177,8 +3189,13 @@
             if (keyboardLikelyOpen) {
                 liveSafeBottom = cssSafeBottom;
             }
+            let fillSafeBottom = Math.max(liveSafeBottom, cssSafeBottom);
+            if (isIos && isMobileViewport_() && isStandalone && fillSafeBottom < 20) {
+                fillSafeBottom = 34;
+            }
             root.style.setProperty('--safe-top-live', `${liveSafeTop}px`);
             root.style.setProperty('--safe-bottom-live', `${liveSafeBottom}px`);
+            root.style.setProperty('--safe-bottom-fill', `${fillSafeBottom}px`);
 
             if (nextHeight === lastSyncedViewportHeight_) return;
             lastSyncedViewportHeight_ = nextHeight;
