--- a/bmw.html
+++ b/bmw.html
@@ -1829,9 +1829,28 @@
         }
 
         @media (max-width: 980px) {
-            .container {
-                display: block;
+            html, body {
+                width: 100%;
+                height: 100%;
+                min-height: 100%;
+            }
+
+            body {
+                position: fixed;
+                inset: 0;
+                width: 100%;
                 height: var(--app-height, 100dvh);
+                min-height: var(--app-height, 100dvh);
+                overflow: hidden;
+            }
+
+            .container {
+                position: fixed;
+                inset: 0;
+                display: block;
+                width: 100%;
+                height: var(--app-height, 100dvh);
+                min-height: var(--app-height, 100dvh);
             }
 
             .map-container {
@@ -3190,6 +3209,24 @@
                 liveSafeBottom = cssSafeBottom;
             }
             let fillSafeBottom = Math.max(liveSafeBottom, cssSafeBottom);
+            const isPortrait = (
+                (window.matchMedia && window.matchMedia('(orientation: portrait)').matches) ||
+                Number(window.innerHeight || 0) >= Number(window.innerWidth || 0)
+            );
+            if (isIos && isMobileViewport_() && isPortrait && !keyboardLikelyOpen) {
+                const screenLong = Math.round(
+                    Math.max(
+                        Number((window.screen && window.screen.height) || 0),
+                        Number((window.screen && window.screen.width) || 0)
+                    )
+                );
+                if (screenLong > 0) {
+                    const inferredBottomGap = Math.max(0, Math.min(96, screenLong - nextHeight - liveSafeTop));
+                    if (inferredBottomGap > 0) {
+                        fillSafeBottom = Math.max(fillSafeBottom, inferredBottomGap);
+                    }
+                }
+            }
             if (isIos && isMobileViewport_() && isStandalone && fillSafeBottom < 20) {
                 fillSafeBottom = 34;
             }
